package de.dhbw.demo.collections.n;

public class Wagon1 {
}
